@@ -1,3 +1,0 @@
-	../avant-preferences/window.glade \
-	../avant-preferences/avant-preferences.py.in \
-	../data/avant-window-navigator.schemas.in
