@@ -2,5 +2,11 @@
 
 	reviewed by: <delete if not using a buddy>
 
+	* POTFILES:
+
+2007-03-07  Neil Jagdish Patel,,,01923 820 124  <njpatel@gmail.com>
+
+	reviewed by: <delete if not using a buddy>
+
 	* Makefile:
 
